[package]
name = "test-ulpi-usb"
version = "0.1.0"
authors = ["Matt Ickstadt <mattico8@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.13"
num_enum = { version = "0.5", default-features = false }
alloc-cortex-m = "0.4.1"

[dependencies.cortex-m]
version = "0.7.1"

[dependencies.stm32h7xx-hal]
features = ["stm32h743v", "rt", "usb_hs"]
path = "stm32h7xx-hal"

[dependencies.usbd-serial]
path = "usbd-serial"

[dependencies.usb-device]
path = "usb-device"

[dependencies.synopsys-usb-otg]
path = "synopsys-usb-otg"
features = ["cortex-m", "hs"]

[dependencies.defmt]
git = "https://github.com/knurling-rs/defmt"
rev = "574f77f"

[dependencies.defmt-rtt]
git = "https://github.com/knurling-rs/defmt"
rev = "574f77f"

[dependencies.panic-probe]
git = "https://github.com/knurling-rs/defmt"
rev = "574f77f"
features = ["print-defmt"]

[features]
default = ["defmt-debug"]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[patch.crates-io]
usbd-serial = { path = "usbd-serial" }
synopsys-usb-otg = { path = "synopsys-usb-otg" }
usb-device = { path = "usb-device" }
#stm32-usbd = { path = "stm32-usbd" }